---
source: tests/golden_tests.rs
input_file: tests/golden_tests/encode_pattern_match/non_matching_fst_arg.bend
---
(Foo) = λa λb (b λc let {c c_2} = c; (Foo c c_2) λd d a)

(bool/true) = λa λ* a

(bool/false) = λ* λb b
